--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
       name="description"
       content="An app for selecting lottery winners"
     />
+    <!-- <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+  integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+  crossorigin="anonymous"
+/> -->
    
     <title>Lottery Winners by TradeCoder</title>
   </head>
